--- a/index.html
+++ b/index.html
@@ -112,7 +112,15 @@
         garageLight.shadow.mapSize.height = 2048;
         garageLight.shadow.bias = -0.005;
         
+        //disco
+        const discoLamp = new THREE.PointLight(0xffffff, 500, 1000, 2);
+        discoLamp.position.set(-70,25,-88)
+        discoLamp.castShadow = true;
+        discoLamp.shadow.mapSize.width = 2048;
+        discoLamp.shadow.mapSize.height = 2048;
+        discoLamp.shadow.bias = -0.005;
 
+        scene.add(discoLamp)
         // EVENT HANDLING
         let keyboard = {};
         document.addEventListener('keydown', function (event) {
@@ -165,7 +173,7 @@
         }
 
         // LOAD MODELS
-        let alas, rumah, pintuUtama, streetLamp1, streetLamp2, kipas, sofa, longTable, bulan, kasur, pigura, mazda, glight;
+        let alas, rumah, pintuUtama, streetLamp1, streetLamp2, kipas, sofa, longTable, bulan, kasur, pigura, mazda, glight,radio,radioTable,disco;
         function objShadow(child) {
             if (child.isMesh) {
                 child.castShadow = true;
@@ -370,8 +378,49 @@
                     }, undefined, reject);
                 })
                 await glightPromise;
-
-                await Promise.all([ruanganPromise, streetlamp1Promise, streetlamp2Promise, kipasPromise, sofaPromise, longTablePromise, kasurPromise, piguraPromise, glightPromise]);
+                //load radioTable 
+                const radioTablePromise = new Promise((resolve, reject) => {
+                    loader.load('./public/table.glb', function (gltf) {
+                        radioTable = gltf.scene;
+                        radioTable.traverse(objShadow);
+                        radioTable.scale.set(2.6,2.6,2.6);
+                        radioTable.position.y = 7;
+                        radioTable.position.x = -70;
+                        radioTable.position.z = -88;
+                        scene.add(radioTable);
+                        resolve();
+                    }, undefined, reject);
+                })
+                await radioTablePromise
+                //load radio
+                const radioPromise = new Promise((resolve, reject) => {
+                    loader.load('./public/radio_vef202.glb', function (gltf) {
+                        radio = gltf.scene;
+                        radio.traverse(objShadow);
+                        radio.scale.set(1.5,1.5,1.5);
+                        radio.position.y = 15;
+                        radio.position.x = -70;
+                        radio.position.z = -88;
+                        radio.rotation.y = Math.PI;
+                        scene.add(radio);
+                        resolve();
+                    }, undefined, reject);
+                })
+                await radioPromise
+                const discoPromise = new Promise((resolve, reject) => {
+                    loader.load('./public/disco_ball.glb', function (gltf) {
+                        disco= gltf.scene;
+                        disco.traverse(objShadow);
+                        disco.scale.set(4,4,4);
+                        disco.position.y = 35;
+                        disco.position.x = -70;
+                        disco.position.z = -88;
+                        scene.add(disco);
+                        resolve();
+                    }, undefined, reject);
+                })
+                await discoPromise
+                await Promise.all([ruanganPromise, streetlamp1Promise, streetlamp2Promise, kipasPromise, sofaPromise, longTablePromise, kasurPromise, piguraPromise, glightPromise,radioTablePromise,discoPromise,radioPromise]);
             } catch (error) {
                 console.log("Error loading models : " + error);
             }
@@ -425,6 +474,23 @@
 
         // ANIMATE
         let openPintuUtama = false;
+        const colors = [
+            0xff0000, // Red
+            0x00ff00, // Green
+            0x0000ff, // Blue
+            0xffff00, // Yellow
+            0xff00ff, // Magenta
+            0x00ffff  // Cyan
+        ];
+
+        let currentColorIndex = 0;
+
+        // Function to change the light color
+        function changeColor() {
+            discoLamp.color.set(colors[currentColorIndex]);
+            currentColorIndex = (currentColorIndex + 1) % colors.length;
+        }
+        setInterval(changeColor, 1500);
         function bukaPintuUtama() {
             if (pintuUtama) {
                 if (openPintuUtama) {
@@ -472,7 +538,7 @@
                 garageLight.visible = false;
             }
 
-
+            
             renderer.render(scene, camera);
         }
 
