--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PROJECT grafkom</title>
+    <link rel="stylesheet" href="style.css">
     <style>
         body {
             margin: 0;
@@ -17,6 +18,11 @@
         style="position: fixed; top: 10px; left: 10px; background-color: rgb(16, 20, 41); height: 60px; width: 250px;  padding: 15px;">
         <div style="color: white; font-family: 'Courier New', Courier, monospace;">kordinat : <span
                 id="kordinat"></span></div>
+    </div>
+    <div class="crosshair">
+        <div class="vertical"></div>
+        <div class="horizontal"></div>
+        <div class="focus-indicator">press<span class="characterHighlight"> F </span> to interact</div> 
     </div>
     <script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
     <script type="importmap">
@@ -42,6 +48,7 @@
 
         // INITIAL SETUP
         const scene = new THREE.Scene();
+        const raycaster = new THREE.Raycaster();
         const camera = new THREE.PerspectiveCamera(70, window.innerWidth / window.innerHeight, 0.1, 1000);
         camera.position.set(0, 0, 0);
         camera.rotation.order = 'YXZ';
@@ -497,6 +504,8 @@
             currentColorIndex = (currentColorIndex + 1) % colors.length;
         }
         setInterval(changeColor, 1000);
+
+        // animasi buka pintu
         function bukaPintuUtama() {
             if (pintuUtama) {
                 if (openPintuUtama) {
@@ -510,6 +519,29 @@
                 }
             }
         }
+
+        // animasi crosshair
+        // Elemen crosshair
+        const crosshair = document.querySelector('.crosshair');
+        const focusIndicator = crosshair.querySelector('.focus-indicator');
+
+        let boxHelper;
+        // Fungsi untuk memperbarui crosshair
+        function updateCrosshair() {
+            // Lakukan raycast dari kamera
+            if (sofa) {
+                raycaster.setFromCamera(new THREE.Vector2(0, 0), camera);
+                const intersects = raycaster.intersectObjects([sofa]);
+
+                if (intersects.length > 0) {
+                    focusIndicator.style.visibility = 'visible';
+                } else {
+                    focusIndicator.style.visibility = 'hidden';
+                }
+            }
+        }
+
+        // animate function
         function animate() {
             requestAnimationFrame(animate);
 
@@ -518,13 +550,13 @@
 
             const deltaTime = Math.min(0.05, clock.getDelta()) / STEPS_PER_FRAME;
             for (let i = 0; i < STEPS_PER_FRAME; i++) {
+                updateCrosshair();
                 controls(deltaTime);
                 updatePlayer(deltaTime);
                 if (playerOnFloor) {
                     jump = false;
                 }
             }
-            console.log(camera.position);
             control.lock();
 
             // animasi kipas
