--- a/index.html
+++ b/index.html
@@ -19,10 +19,11 @@
         <div style="color: white; font-family: 'Courier New', Courier, monospace;">kordinat : <span
                 id="kordinat"></span></div>
     </div>
+    <video id="video_ww" style="display: none;"></video>
     <div class="crosshair">
         <div class="vertical"></div>
         <div class="horizontal"></div>
-        <div class="focus-indicator">press<span class="characterHighlight"> F </span> to interact</div> 
+        <div class="focus-indicator">press<span class="characterHighlight"> F </span> to interact</div>
     </div>
     <script async src="https://unpkg.com/es-module-shims@1.6.3/dist/es-module-shims.js"></script>
     <script type="importmap">
@@ -55,6 +56,7 @@
         const loader = new GLTFLoader();
         const clock = new THREE.Clock();
         const textureLoader = new THREE.TextureLoader();
+        let video
 
 
         const GRAVITY = 30;
@@ -178,6 +180,9 @@
                     playerVelocity.y = 15;
                 }
             }
+            if(keyboard['F'] || keyboard['f']){
+                video.play();
+            }
         }
 
         function updateBobbing() {
@@ -187,7 +192,10 @@
         }
 
         // LOAD MODELS
-        let alas, rumah, pintuUtama, streetLamp1, streetLamp2, kipas, sofa, longTable, bulan, kasur, pigura, mazda, glight, radio, radioTable, disco;
+        let alas, rumah, pintuUtama, streetLamp1,
+            streetLamp2, kipas, sofa, longTable,
+            bulan, kasur, pigura, mazda, glight,
+            radio, radioTable, disco, television;
         function objShadow(child) {
             if (child.isMesh) {
                 child.castShadow = true;
@@ -220,7 +228,7 @@
                         rumah.traverse(objShadow);
 
                         scene.add(rumah);
-                        // worldOctree.fromGraphNode(rumah);
+                        worldOctree.fromGraphNode(rumah);
                         resolve();
                     }, undefined, reject);
                 });
@@ -384,9 +392,7 @@
                         radioTable = gltf.scene;
                         radioTable.traverse(objShadow);
                         radioTable.scale.set(2.6, 2.6, 2.6);
-                        radioTable.position.y = 7;
-                        radioTable.position.x = -70;
-                        radioTable.position.z = -88;
+                        radioTable.position.set(-70, 7, -88);
 
                         scene.add(radioTable);
                         resolve();
@@ -400,9 +406,7 @@
                         radio = gltf.scene;
                         radio.traverse(objShadow);
                         radio.scale.set(1.5, 1.5, 1.5);
-                        radio.position.y = 15;
-                        radio.position.x = -70;
-                        radio.position.z = -88;
+                        radio.position.set(-70, 15, -88);
                         radio.rotation.y = Math.PI;
 
                         scene.add(radio);
@@ -417,9 +421,7 @@
                         disco = gltf.scene;
                         disco.traverse(objShadow);
                         disco.scale.set(4, 4, 4);
-                        disco.position.y = 35;
-                        disco.position.x = -70;
-                        disco.position.z = -88;
+                        disco.position.set(-70, 35, -88);
 
                         scene.add(disco);
                         resolve();
@@ -427,12 +429,42 @@
                 })
                 await discoPromise
 
-                await Promise.all([ruanganPromise, streetlamp1Promise, streetlamp2Promise, kipasPromise, sofaPromise, longTablePromise, kasurPromise, piguraPromise, glightPromise, radioTablePromise, discoPromise, radioPromise]);
+                const televisionPromise = new Promise((resolve, reject) => {
+                    loader.load('./public/television.glb', function (gltf) {
+                        television = gltf.scene;
+                        television.traverse(objShadow)
+                        television.scale.set(20, 20, 20);
+                        television.rotation.y = -Math.PI / 2;
+                        television.position.set(-5, 12.25, -88);
+
+                        scene.add(television);
+                        resolve();
+                    }, undefined, reject);
+                })
+                await televisionPromise
+
+                await Promise.all([ruanganPromise, streetlamp1Promise, streetlamp2Promise,
+                    kipasPromise, sofaPromise, longTablePromise, kasurPromise,
+                    piguraPromise, glightPromise, radioTablePromise, discoPromise,
+                    radioPromise, televisionPromise]);
             } catch (error) {
                 console.log("Error loading models : " + error);
             }
         }
         loadModels();
+        // load vidio
+        video = document.getElementById('video_ww')
+        video.src = "public/wutheringwaves.mp4";
+        video.muted = false;
+        video.loop = true;
+        let videoTexture = new THREE.VideoTexture(video);
+        const geoLayar = new THREE.PlaneGeometry( 2.2255, 1.245 ); // param1 : lebar, param2 : tinggi unitnya
+        const mpmLayar = new THREE.MeshBasicMaterial( {map: videoTexture} );
+        const layar = new THREE.Mesh( geoLayar, mpmLayar );
+        layar.position.set(-5.7, 18.5, -88.25)
+        layar.scale.set(7.3,7.8,8)
+        layar.rotation.set(0, -Math.PI / 2, 0)
+        scene.add( layar );  
 
         // COLLISION
         function playerCollisions() {
@@ -525,15 +557,16 @@
         const crosshair = document.querySelector('.crosshair');
         const focusIndicator = crosshair.querySelector('.focus-indicator');
 
-        let boxHelper;
+
+        let interactWith; // buat simpen dia interact sama benda apa
         // Fungsi untuk memperbarui crosshair
         function updateCrosshair() {
             // Lakukan raycast dari kamera
-            if (sofa) {
+            if (television) {
                 raycaster.setFromCamera(new THREE.Vector2(0, 0), camera);
-                const intersects = raycaster.intersectObjects([sofa]);
+                const intersectTelevision = raycaster.intersectObject(television);
 
-                if (intersects.length > 0) {
+                if (intersectTelevision.length > 0 && intersectTelevision[0].distance <= 20) {
                     focusIndicator.style.visibility = 'visible';
                 } else {
                     focusIndicator.style.visibility = 'hidden';
